# denso_cobotta_ros

bringup_launch/: CMakeLists.txt  package.xml
bringup_launch/launch/: cobotta.launch  cobotta_moveit_multi.launch  denso_cobotta_bringup_multi.launch  denso_cobotta_gazebo_multi.launch
cobotta_launch/: CMakeLists.txt  package.xml
cobotta_launch/launch/: gazebo.launch
cobotta_launch/worlds/: lights.world
denso_cobotta_bringup/launch/: denso_cobotta_bringup_multi.launch  denso_cobotta_bringup_only_driver.launch
denso_cobotta_descriptions/cobotta_description/: J1.dae  J2.dae  J3.dae  J5.dae  J6.dae  base_link.dae  denso_cobotta_control_multi.yaml
